# Entrepot

./: .gitignore  TODO
SysML/EntrepotRobot/: .project  entrepotRobot.notation  entrepotRobot.uml
SysML/___Profiles_Centrale_Lille_Project-2023-11/: .project
Trajectoires/: makefile  sim  simulationTrajectoires  simulationTrajectoires.c
Trajectoires/include/: robot.h  sections.h  utils.h
Trajectoires/src/: environnement.c  main.c  robot.c  sections.c  simulationTrajectoires.c  utils.c
gestionnaireInventaire/: Makefile  inventory.json
gestionnaireInventaire/include/: server.h  utils.h
gestionnaireInventaire/src/: inventoryManager.cpp  main.c  order.c  server.c  serveur.c
manager/: Makefile  inventory.json
objectDetection/: .gitignore  Makefile
robot-controller/: CMakeLists.txt  PID.slx  README.md  makefile  robot-controller.ino
robot-controller/include/: InverseMotorModel.h  Motor.h  MotorController.h  Robot.h  Trajectory.h  Utils.h
robot-controller/lib/WiringPi/lib/: libwiringPi.so.2.50  libwiringPiDev.so.2.50
robot-controller/robot-controller/: robot-controller.ino
robot-controller/src/: InverseMotorModel.cpp  InverseMotorModel.h  Motor.cpp  MotorController.cpp  MotorController.h  Robot.cpp  Robot.h  Trajectory.cpp  Utils.cpp  main.cpp
robot-controller/src/utils/: Utils.cpp  Utils.h
robot-controller/tests/: motor.ino  motorController.ino  robot.ino  robot_withAPI.ino  trajectory.ino  trajectory_withAPI.ino
robot-controller/tests/motor/: motor.ino  motorController.ino
rpiRobots/: .gitignore  makefile  param.json  scopy.sh
(+42 files in other folders)
